fix: bug wallet selector not aligned

--- a/client/src/components/Navbar/index.scss
+++ b/client/src/components/Navbar/index.scss
@@ -53,8 +53,8 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 2px solid var(--btn-text);
-  border-color: var(--btn-text) transparent var(--btn-text) transparent;
+  border: 2px solid var(--btn-text-color);
+  border-color: var(--btn-text-color) transparent var(--btn-text-color) transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 
